Added new secret for mybackend in preprod
Updating file(s) `stack.yaml` using yq expression `. | select(.[].name == "mybackend--preprod").[].secrets += ["new-secret"]`

-- 
Generated by [Octopilot](https://github.com/dailymotion-oss/octopilot) [v1.2.22](https://github.com/dailymotion-oss/octopilot/releases/tag/v1.2.22) from /

--- a/stack.yaml
+++ b/stack.yaml
@@ -6,7 +6,8 @@
     teams:
       - my-dev
     k8s:
-    - gke:mycluster
+      - gke:mycluster
   secrets:
-  - custom--mybackend--preprod--client-id
-  - custom--mybackend--preprod--client-key
+    - custom--mybackend--preprod--client-id
+    - custom--mybackend--preprod--client-key
+    - new-secret
